--- a/claims/cluster.yaml
+++ b/claims/cluster.yaml
@@ -1,17 +1,17 @@
 apiVersion: demo.anthos.com/v1
 kind: CompositeCluster 
 metadata:
-  name: k8s-cluster
+  name: k8s-cluster11
 spec:
   compositionRef:
     # Possible values cluster-gcp-gke, cluster-aws-eks, cluster-azure-aks
-    name: cluster-gcp-gke
+    name: cluster-aws-eks
   parameters:
     # Possible values small, medium, large
-    nodeSize: small
-    k8sVersion: "1.24"
+    nodeSize: medium
+    k8sVersion: "1.25"
     fleetProject: "261832825633"
-    minNodeCount: 3
+    minNodeCount: 2
     adminUsers:
     - bkauf@google.com  
   writeConnectionSecretToRef:
