--- a/claims/ns-scoped-claims/nodepool-ns-scope.yaml
+++ b/claims/ns-scoped-claims/nodepool-ns-scope.yaml
@@ -6,8 +6,8 @@ metadata:
     cluster-owner: bkauf
 spec:
   compositionRef:
-    # Possible values gcp-node-pool, gcp-gke-nodepool-up
-    name: gcp-gke-nodepool-up
+    # Possible values gcp-node-pool
+    name: gcp-gke-nodepool
   parameters:
     clusterName: "upbound-cluster-m6str"
     # Possible values small, medium, large
