--- a/compositions/azure-aks.yaml
+++ b/compositions/azure-aks.yaml
@@ -36,7 +36,7 @@ spec:
             - type: SystemAssigned
           location: East Us
           resourceGroupName: bkauf
-          kubernetesVersion: "1.24"
+          kubernetesVersion: "1.25"
     patches:
     - type: FromCompositeFieldPath
       fromFieldPath: spec.parameters.k8sVersion
@@ -54,6 +54,12 @@ spec:
     - type: ToCompositeFieldPath
       fromFieldPath: metadata.annotations[crossplane.io/external-name]
       toFieldPath: status.clusterName
+    - type: ToCompositeFieldPath
+      fromFieldPath: spec.forProvider.location
+      toFieldPath: status.region
+    - type: ToCompositeFieldPath
+      fromFieldPath: status.conditions.status
+      toFieldPath: status.controlPlaneStatus
 
 
 
