--- a/claims/ns-scoped-claims/cluster-ns-scope.yaml
+++ b/claims/ns-scoped-claims/cluster-ns-scope.yaml
@@ -1,13 +1,13 @@
 apiVersion: demo.anthos.com/v1
 kind: Cluster
 metadata:
-  name: test-cluster
+  name: test-gke-cluster
   labels:
     cluster-owner: bkauf
 spec:
   compositionRef:
       # Possible values cluster-gcp-gke, cluster-aws-eks, cluster-azure-aks
-    name: cluster-aws-eks
+    name: cluster-gcp-gke
   parameters:
     # Possible values small, medium, large
     nodeSize: small
