add importing GKE on GCP clusters via resource claim and composition

--- a/package/xrd.yaml
+++ b/package/xrd.yaml
@@ -44,6 +44,8 @@ spec:
                     type: string
                   location:
                     type: string
+                  clusterName: 
+                    type: string
                 type: object
           status:
             type: object
