--- a/claims/cluster.yaml
+++ b/claims/cluster.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   compositionRef:
     # Possible values cluster-gcp-gke, cluster-aws-eks, cluster-azure-aks
-    name: cluster-aws-eks
+    name: cluster-gcp-gke
   parameters:
     # Possible values small, medium, large
     nodeSize: medium
