--- a/compositions/gcp-gke.yaml
+++ b/compositions/gcp-gke.yaml
@@ -17,7 +17,7 @@ spec:
   resources:
   - name: cluster
     base:
-      apiVersion: container.gcp.upbound.io/v1beta1
+      apiVersion: container.gcp.gke.cloud.google.com/v1beta1
       kind: Cluster
       metadata:
         annotations:
@@ -52,7 +52,7 @@ spec:
       toFieldPath: status.controlPlaneStatus
   - name: nodepool
     base:
-      apiVersion: container.gcp.upbound.io/v1beta1
+      apiVersion: container.gcp.gke.cloud.google.com/v1beta1
       kind: NodePool
       metadata:
         annotations:
