--- a/claims/ns-scoped-claims/cluster-ns-scope.yaml
+++ b/claims/ns-scoped-claims/cluster-ns-scope.yaml
@@ -1,7 +1,7 @@
 apiVersion: demo.anthos.com/v1
 kind: Cluster
 metadata:
-  name: test-gke-cluster
+  name: test-gke-cluster3
   labels:
     cluster-owner: bkauf
 spec:
