--- a/compositions/gcp-gke-nodepool.yaml
+++ b/compositions/gcp-gke-nodepool.yaml
@@ -17,7 +17,7 @@ spec:
   resources:
   - name: nodepool
     base:
-      apiVersion: container.gcp.upbound.io/v1beta1
+      apiVersion: container.gcp.gke.cloud.google.com/v1beta1
       kind: NodePool
       metadata:
         annotations:
