--- a/import/import-aks-cluster.yaml
+++ b/import/import-aks-cluster.yaml
@@ -1,5 +1,5 @@
 # Demo of importing existing AKS cluster
-apiVersion: containerservice.azure.upbound.io/v1beta1
+apiVersion: containerservice.azure.gke.cloud.google.com/v1beta1
 kind: KubernetesCluster
 metadata:
   annotations:
