--- a/import/import-gcp-gke.yaml
+++ b/import/import-gcp-gke.yaml
@@ -1,4 +1,4 @@
-apiVersion: container.gcp.upbound.io/v1beta1
+apiVersion: container.gcp.gke.cloud.google.com/v1beta1
 kind: Cluster
 metadata:
   name: cluster-1 # edit to match cluster name
