--- a/providers/aws-providerconfig.yaml
+++ b/providers/aws-providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: aws.upbound.io/v1beta1
+apiVersion: aws.gke.cloud.google.com/v1beta1
 kind: ProviderConfig
 metadata:
   name: default-aws
@@ -6,6 +6,6 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      namespace: crossplane-system
+      namespace: crossplane-config
       name: aws-creds
       key: creds
