--- a/compositions/azure-aks.yaml
+++ b/compositions/azure-aks.yaml
@@ -17,7 +17,7 @@ spec:
   resources:
   - name: akscluster
     base:
-      apiVersion: containerservice.azure.upbound.io/v1beta1
+      apiVersion: containerservice.azure.gke.cloud.google.com/v1beta1
       kind: KubernetesCluster
       metadata:
         labels:
