--- a/providers/azure-providerconfig.yaml
+++ b/providers/azure-providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: azure.upbound.io/v1beta1
+apiVersion: azure.gke.cloud.google.com/v1beta1
 kind: ProviderConfig
 metadata:
   name: default-azure
@@ -6,6 +6,6 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      namespace: crossplane-system
+      namespace: crossplane-config
       name: azure-creds
       key: creds
