add provider to eks composition

--- a/compositions/aws-eks.yaml
+++ b/compositions/aws-eks.yaml
@@ -416,6 +416,8 @@ spec:
       metadata:
         name: attachedcluster
       spec:
+        providerConfigRef: 
+            name: default-gcp
         forProvider:
           distribution: eks
           location: us-west1
