--- a/import/import-with-composition/import-aws-eks-nodegroup.yaml
+++ b/import/import-with-composition/import-aws-eks-nodegroup.yaml
@@ -42,6 +42,9 @@ spec:
               - subnet-2
     patches:
     - type: FromCompositeFieldPath
+      fromFieldPath: spec.parameters.managementPolicy
+      toFieldPath: spec.managementPolicy
+   - type: FromCompositeFieldPath
       fromFieldPath: spec.parameters.nodePoolName
       toFieldPath: metadata.annotations[crossplane.io/external-name]
       toFieldPath: metadata.annotations.name
